--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <div class="container">
     <h2>Min Profil</h2>
     <div id="profilinfo">Laster data...</div>
+    <div style="text-align:center; margin-top: 30px;">
+      <button onclick="visModul('kunst')">👉 Utforsk AI Innovate</button>
+    </div>
   </div>
 </div>
 
@@ -32,6 +35,9 @@
     <h2>Betaling</h2>
     <p>Her kommer betalingssystemet for medlemskap og tjenester. Du vil kunne koble til Vipps, kortbetaling, eller ArtToken-balanse.</p>
     <button onclick="alert('Betalingssystem kommer snart!')">🔒 Betal nå</button>
+    <div style="text-align:center; margin-top: 30px;">
+      <button onclick="visModul('kunst')">👉 Utforsk AI Innovate</button>
+    </div>
   </div>
 </div>
 
