--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <div class="container">
     <h2>Min Profil</h2>
     <div id="profilinfo">Laster data...</div>
+    <div style="text-align:center; margin-top: 30px;">
+      <button onclick="visModul('kunst')">👉 Utforsk AI Innovate</button>
+    </div>
   </div>
 </div>
 
@@ -32,12 +35,23 @@
     <h2>Betaling</h2>
     <p>Her kommer betalingssystemet for medlemskap og tjenester. Du vil kunne koble til Vipps, kortbetaling, eller ArtToken-balanse.</p>
     <button onclick="alert('Betalingssystem kommer snart!')">🔒 Betal nå</button>
+    <div style="text-align:center; margin-top: 30px;">
+      <button onclick="visModul('kunst')">👉 Utforsk AI Innovate</button>
+    </div>
+  </div>
+</div>
+
+<div id="kunst" class="skjerm">
+  <div class="container">
+    <h2>Kunstmodul</h2>
+    <p>Kommer snart – her kan du laste opp og vise frem dine kunstverk.</p>
   </div>
 </div>
 
 <footer class="bunnmeny">
   <button onclick="visModul('profil')">Profil</button>
   <button onclick="visModul('betaling')">Betaling</button>
+  <button onclick="visModul('kunst')">Kunst</button>
 </footer>
 
 <script src="profil.js"></script>
