--- a/index.html
+++ b/index.html
@@ -2,37 +2,44 @@
 <html lang="no">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Innovate – App V3.6</title>
-  <link rel="stylesheet" href="registrering.css" />
-  <script src="registrering.js" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Innovate – Profil og Betaling</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body style="margin:0; background:#000; color:#fff; font-family:sans-serif;">
-  <div id="app" style="padding-bottom: 100px;"></div>
-
-  <!-- HURTIGTILGANG FRA APP-MENYEN -->
-  <div id="app-bottom-menu" style="position: fixed; bottom: 0; left: 0; right: 0; height: 70px; background: #0f0f1a; border-top: 1px solid #222; display: flex; justify-content: space-around; align-items: center; box-shadow: 0 -2px 10px rgba(0,255,225,0.1); z-index: 1000;">
-    <a href="#registrering" onclick="visModul('modul-registrering')" style="color: #00ffe1; text-decoration: none; font-size: 18px;">📝 Registrering</a>
-    <a href="#profil" onclick="visModul('modul-profil')" style="color: #00ffe1; text-decoration: none; font-size: 18px;">👤 Profil</a>
-    <a href="#rekruttering" onclick="visModul('modul-rekruttering')" style="color: #00ffe1; text-decoration: none; font-size: 18px;">🔗 Rekruttering</a>
-    <a href="#kunst" onclick="visModul('modul-kunst')" style="color: #00ffe1; text-decoration: none; font-size: 18px;">🎨 Kunst</a>
-    <a href="#jobb" onclick="visModul('modul-jobb')" style="color: #00ffe1; text-decoration: none; font-size: 18px;">💼 Jobb</a>
-    <a href="#aurora" onclick="visModul('modul-aurora')" style="color: #00ffe1; text-decoration: none; font-size: 18px;">🤖 Aurora</a>
+<body>
+  <div id="profil" class="skjerm vis">
+    <div class="profil-container">
+      <h2>Min Profil</h2>
+      <div id="profilinfo">Laster data...</div>
+      <div style="margin-top: 20px; text-align: center;">
+        <button onclick="visModul('betaling')" id="betaling">💳 Gå til betaling</button>
+        <button onclick="visModul('kunst')" id="kunst">🎨 Utforsk AI Innovate</button>
+      </div>
+    </div>
   </div>
 
-  <script>
-    function visModul(modulnavn) {
-      fetch(modulnavn + '.html')
-        .then(res => res.text())
-        .then(html => {
-          document.getElementById('app').innerHTML = html;
-        })
-        .catch(() => {
-          document.getElementById('app').innerHTML = '<div style="padding: 40px; text-align: center;">🚧 Modulen <strong>' + modulnavn + '</strong> er ikke klar ennå.</div>';
-        });
-    }
+  <div id="betaling" class="skjerm">
+    <div class="profil-container">
+      <h2>Betaling</h2>
+      <p>Her skal det integreres betalingsløsning (f.eks. Vipps, Stripe, Folio...)</p>
+      <button onclick="visModul('profil')">🔙 Tilbake til profil</button>
+    </div>
+  </div>
 
-    visModul('modul-registrering');
-  </script>
+  <div id="kunst" class="skjerm">
+    <div class="profil-container">
+      <h2>Velkommen til AI Innovate</h2>
+      <p>Her kommer kunst, skattejakt og mer!</p>
+      <button onclick="visModul('profil')">🔙 Tilbake til profil</button>
+    </div>
+  </div>
+
+  <footer class="bunnmeny">
+    <button onclick="visModul('profil')">Profil</button>
+    <button onclick="visModul('betaling')">Betaling</button>
+    <button onclick="visModul('kunst')">Kunst</button>
+  </footer>
+
+  <script src="profil.js"></script>
 </body>
 </html>
