--- a/modul-profil.html
+++ b/modul-profil.html
@@ -1,10 +1,29 @@
-<div style="padding: 30px;">
-  <h2>👤 Din profil</h2>
-  <p><strong>Navn:</strong> <span id="profil-navn"></span></p>
-  <p><strong>E-post:</strong> <span id="profil-epost"></span></p>
-  <p><strong>Telefon:</strong> <span id="profil-telefon"></span></p>
-  <p><strong>Vervet av:</strong> <span id="profil-vervet"></span></p>
-  <p><strong>Kontonummer:</strong> <span id="profil-konto"></span></p>
-  <p><strong>Registrert:</strong> <span id="profil-dato"></span></p>
-  <button onclick="loggUt()" style="margin-top: 20px; padding: 10px 20px; background: #00ffe1; border: none; border-radius: 6px;">⚙️ Innstillinger</button>
-</div>
+<!DOCTYPE html>
+<html lang="no">
+<head>
+  <meta charset="UTF-8">
+  <title>Din profil</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="profil.js" defer></script>
+</head>
+<body>
+  <div class="profile-card">
+    <h2>👤 Din profil</h2>
+    <p><strong>Navn:</strong> <span id="profil-navn"></span></p>
+    <p><strong>E-post:</strong> <span id="profil-epost"></span></p>
+    <p><strong>Telefon:</strong> <span id="profil-telefon"></span></p>
+    <p><strong>Vervet av:</strong> <span id="profil-vervet"></span></p>
+    <p><strong>Kontonummer:</strong> <span id="profil-konto"></span></p>
+    <p><strong>Registrert:</strong> <span id="profil-dato"></span></p>
+  </div>
+  <div class="menu-toggle">
+    <button onclick="toggleMeny()">🧭 Mer</button>
+    <div id="meny" style="display:none;">
+      <a href="modul-registrering.html">📝 Registrering</a>
+      <a href="modul-kunst.html">🎨 Kunst</a>
+      <a href="modul-aksjer.html">📈 Aksjer</a>
+    </div>
+  </div>
+</body>
+</html>
