--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="no">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Innovate – Supabase test</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script>
-    const supabaseUrl = 'https://sjsrtfydsvxwragamuvf.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNqc3J0Znlkc3Z4d3JhZ2FtdXZmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgyMTYwMjQsImV4cCI6MjA2Mzc5MjAyNH0.C03IFs5FZNvDUtOKo31jxaei-6ZWJWH3GqFvp38AsO8';
-    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
-  </script>
-  <script defer src="registrering.js"></script>
-</head>
-<body>
-  <h1>Registrering</h1>
-  <form id="regForm">
-    <input type="text" placeholder="Fornavn" id="fornavn" required /><br/>
-    <input type="text" placeholder="Etternavn" id="etternavn" required /><br/>
-    <input type="email" placeholder="E-post" id="epost" required /><br/>
-    <input type="text" placeholder="Telefon" id="telefon" /><br/>
-    <input type="text" placeholder="Hvem vervet deg?" id="vervet" /><br/>
-    <button type="submit">Registrer</button>
-  </form>
-</body>
-</html>
+<!-- index.html content goes here -->
