--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     }
 
     window.addEventListener("hashchange", () => {
-      const modul = location.hash.replace("#", "") || "registrering-supabase";
+      const modul = location.hash.replace("#", "") || "modul-registrering-supabase";
       visModul(modul);
     });
 
     window.addEventListener("DOMContentLoaded", () => {
-      const modul = location.hash.replace("#", "") || "registrering-supabase";
+      const modul = location.hash.replace("#", "") || "modul-registrering-supabase";
       visModul(modul);
     });
   </script>
