--- a/index.html
+++ b/index.html
@@ -1,45 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="no">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Innovate Stabil</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script>
-    const supabaseUrl = 'https://sjsrtfydsvxwragamuvf.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...';
-    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
-
-    function visModul(modulnavn) {
-      fetch(modulnavn + '.html')
-        .then(res => {
-          if (!res.ok) throw new Error("Modul ikke funnet");
-          return res.text();
-        })
-        .then(html => {
-          document.getElementById("app").innerHTML = html;
-        })
-        .catch(err => {
-          fetch('modul-feil.html')
-            .then(fallback => fallback.text())
-            .then(html => document.getElementById("app").innerHTML = html);
-        });
-    }
-
-    window.addEventListener("hashchange", () => {
-      const modul = location.hash.replace("#", "") || "modul-registrering-supabase";
-      visModul(modul);
-    });
-
-    window.addEventListener("DOMContentLoaded", () => {
-      const modul = location.hash.replace("#", "") || "modul-registrering-supabase";
-      visModul(modul);
-    });
-  </script>
-</head>
-<body>
-  <div id="app">Laster...</div>
-</body>
-</html>
+<!DOCTYPE html><html lang='no'><head><meta charset='UTF-8'><title>Registrering</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='manifest' href='manifest.json'><link rel='stylesheet' href='style.css'><script>if ('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('service-worker.js');});}</script></head><body><div class='profile-card'><h2>📝 Registrering</h2><form onsubmit='registrer(event)'><input type='text' id='fornavn' placeholder='Fornavn' required><input type='text' id='etternavn' placeholder='Etternavn' required><input type='email' id='epost' placeholder='E-post' required><input type='text' id='telefon' placeholder='Telefon (valgfritt)'><input type='text' id='verver' placeholder='Hvem vervet deg?'><input type='text' id='konto' placeholder='Kontonummer (valgfritt)'><input type='password' placeholder='Passord' required><input type='password' placeholder='Gjenta passord' required><label><input type='checkbox' required> Jeg godtar <a href='#'>vilkårene</a>.</label><button type='submit'>Registrer meg</button></form></div><script>function registrer(e){e.preventDefault();localStorage.setItem('fornavn',document.getElementById('fornavn').value);localStorage.setItem('etternavn',document.getElementById('etternavn').value);localStorage.setItem('epost',document.getElementById('epost').value);localStorage.setItem('telefon',document.getElementById('telefon').value);localStorage.setItem('verver',document.getElementById('verver').value);localStorage.setItem('konto',document.getElementById('konto').value);window.location.href='profil.html';}</script></body></html>
